force-app/main/default/objects/DialogPopUp__c/DialogPopUp__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DialogPopUp</label>
</CustomObject>