force-app/main/default/objects/DialogPopUp__c/fields/Close_on_escape__c.field-meta.xml
<CustomField>
    <fullName>Close_on_escape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close on escape</label>
    <type>Checkbox</type>
</CustomField>