force-app/main/default/objects/DialogPopUp__c/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <label>Content URL</label>
    <type>Url</type>
</CustomField>