force-app/main/default/objects/DialogPopUp__c/fields/Draggable__c.field-meta.xml
<CustomField>
    <fullName>Draggable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draggable</label>
    <type>Checkbox</type>
</CustomField>