force-app/main/default/objects/DialogPopUp__c/fields/External_content__c.field-meta.xml
<CustomField>
    <fullName>External_content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External content</label>
    <type>Checkbox</type>
</CustomField>