force-app/main/default/objects/DialogPopUp__c/fields/Hide_effect__c.field-meta.xml
<CustomField>
    <fullName>Hide_effect__c</fullName>
    <label>Hide effect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>