force-app/main/default/objects/DialogPopUp__c/fields/Hide_titlebar_close__c.field-meta.xml
<CustomField>
    <fullName>Hide_titlebar_close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide titlebar close</label>
    <type>Checkbox</type>
</CustomField>