force-app/main/default/objects/DialogPopUp__c/fields/Modal__c.field-meta.xml
<CustomField>
    <fullName>Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modal</label>
    <type>Checkbox</type>
</CustomField>