force-app/main/default/objects/DialogPopUp__c/fields/Resizable__c.field-meta.xml
<CustomField>
    <fullName>Resizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resizable</label>
    <type>Checkbox</type>
</CustomField>