force-app/main/default/objects/DialogPopUp__c/fields/Scrolling__c.field-meta.xml
<CustomField>
    <fullName>Scrolling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scrolling</label>
    <type>Checkbox</type>
</CustomField>