force-app/main/default/objects/DialogPopUp__c/fields/Show_effect__c.field-meta.xml
<CustomField>
    <fullName>Show_effect__c</fullName>
    <label>Show effect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>