force-app/main/default/objects/DialogPopUp__c/fields/Standard_style__c.field-meta.xml
<CustomField>
    <fullName>Standard_style__c</fullName>
    <label>Standard style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>