force-app/main/default/objects/DialogPopUp__c/fields/Visualforce_page__c.field-meta.xml
<CustomField>
    <fullName>Visualforce_page__c</fullName>
    <label>Visualforce page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>